--- a/templates/extract.html
+++ b/templates/extract.html
@@ -758,15 +758,148 @@
 
 <!--SUPERVISORY BOARD END-->
 
+<!-- BEGINNING OF PROKURISTA -->
+    {% if row.prokurista|length > 0 %}
+    <tr>
+        <td>Prokura:</td>
+        <td></td>
+        <td></td>
+    </tr>
+    {% for i in range (row.prokurista|length) %}
+    <tr>
+        <td></td>
+        {% if row.prokurista[i].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {{ row.prokurista[i].jmeno.jmeno }} {{ row.prokurista[i].jmeno.prijmeni }}{% if row.prokurista[i].jmeno.datum_naroz != "" %}, nar. {{ row.prokurista[i].jmeno.datum_naroz }}{% endif %}<br> 
+            {{ row.prokurista[i].adresa.adresa_text }}{% if row.prokurista[i].text_prokurista != "0" %}<br>{{ row.prokurista[i].text_prokurista }}{% endif %}{{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.prokurista[i].zapis_datum }} {% if row.prokurista[i].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.prokurista[i].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
+    </tr>
+    {% endfor %}
+    <!-- Insert common text for prokura -->
+    {% for i in range (row.prokura_common_text|length) %}
+    <tr>
+        <td></td>
+        {% if row.prokura_common_text[i].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {{ row.prokura_common_text[i].prokura_text }} {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.prokura_common_text[i].zapis_datum }} {% if row.prokura_common_text[i].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.prokura_common_text[i].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
+    </tr>
+    {% endfor %}
+    <!-- End of a common text for prokura -->
+    {% endif %}
+<!--PROKURISTA END-->
+
+<!-- BEGINNING OF JEDINY AKCIONAR -->
+    {% if row.jediny_akcionar|length > 0 %}
+    <tr>
+        <td>Jediný akcionář:</td>
+        <td></td>
+        <td></td>
+    </tr>
+    {% for i in range (row.jediny_akcionar|length) %}
+    <tr>
+        <td></td>
+        {% if row.jediny_akcionar[i].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {% if row.jediny_akcionar[i].akcionar_po_id == None %} {{ row.jediny_akcionar[i].jmeno.jmeno }} {{ row.jediny_akcionar[i].jmeno.prijmeni }}{% if row.jediny_akcionar[i].jmeno.datum_naroz != "" %}, nar. {{ row.jediny_akcionar[i].jmeno.datum_naroz }}{% endif %} {% endif %}   
+            {% if row.jediny_akcionar[i].akcionar_fo_id == None %} {{ row.jediny_akcionar[i].oznaceni_po.nazev }}{% if row.jediny_akcionar[i].oznaceni_po.reg_cislo == 0 %}, IČ {{ row.jediny_akcionar[i].oznaceni_po.ico }}{% endif %}{% if row.jediny_akcionar[i].oznaceni_po.ico == 0 %}, reg č. {{ row.jediny_akcionar[i].oznaceni_po.reg_cislo }}{% endif %} {% endif %} 
+            <br>{{row.jediny_akcionar[i].adresa.adresa_text}} {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.jediny_akcionar[i].zapis_datum }} {% if row.jediny_akcionar[i].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.jediny_akcionar[i].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
+    </tr>
+    {% endfor %}
+    {% endif %}
+
+<!-- JEDINY AKCIONAR END -->
+
+
 <!-- BEGINNING OF SPOLECNIK -->
     {% if row.spolecnici|length > 0 %}
+    <tr>
+        <td>Společníci:</td>
+        <td></td>
+        <td></td>
+    </tr>
     {% for i in range (row.spolecnici|length) %}
     <tr>
-        <td>{% if i == 0 %}Společníci:{% endif %}</td>
-        <td>{% if row.spolecnici[i].spolecnik_po_id == None %} {{ row.spolecnici[i].jmeno.jmeno }} {{ row.spolecnici[i].jmeno.prijmeni }}{% if row.spolecnici[i].jmeno.datum_naroz != "" %}, nar. {{ row.spolecnici[i].jmeno.datum_naroz }}{% endif %} {% endif %}   
+        <td style = padding-left:2em>Společník:</td>
+        {% if row.spolecnici[i].vymaz_datum != 0 %}
+            {% set underlne_style_open = undedrline_open_deleted %}
+            {% set underlne_style_close = undedrline_closed_deleted %}
+        {% else %}
+            {% set underlne_style_open = "" %}
+            {% set underlne_style_close = "" %}
+        {% endif %}
+        <td>{{ underlne_style_open|safe }} {% if row.spolecnici[i].spolecnik_po_id == None %} {{ row.spolecnici[i].jmeno.jmeno }} {{ row.spolecnici[i].jmeno.prijmeni }}{% if row.spolecnici[i].jmeno.datum_naroz != "" %}, nar. {{ row.spolecnici[i].jmeno.datum_naroz }}{% endif %} {% endif %}   
             {% if row.spolecnici[i].spolecnik_fo_id == None %} {{ row.spolecnici[i].oznaceni_po.nazev }}{% if row.spolecnici[i].oznaceni_po.reg_cislo == 0 %}, IČ {{ row.spolecnici[i].oznaceni_po.ico }}{% endif %}{% if row.spolecnici[i].oznaceni_po.ico == 0 %}, reg č. {{ row.spolecnici[i].oznaceni_po.reg_cislo }}{% endif %} {% endif %} 
-            <br>{{row.spolecnici[i].adresa.adresa_text}}</td>
-        <td>Zapsáno: {{ row.spolecnici[i].zapis_datum }} {% if row.spolecnici[i].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.spolecnici[i].vymaz_datum }} {% endif %} {{ row.spolecnici[i].podily}}</td>
+            <br>{{row.spolecnici[i].adresa.adresa_text}} {{ underlne_style_close|safe }}</td>
+        <td>{{ underlne_style_open|safe }} Zapsáno: {{ row.spolecnici[i].zapis_datum }} {% if row.spolecnici[i].vymaz_datum != 0 %} <br>   Vymazáno: {{ row.spolecnici[i].vymaz_datum }} {% endif %} {{ underlne_style_close|safe }}</td>
+        <!-- Insert individual ownership interests -->
+        {% if row.spolecnici[i].podily|length > 0 %}
+            
+            {% for j in range (row.spolecnici[i].podily|length) %}
+                <!-- Set type of deposit -->
+                {% if row.spolecnici[i].podily[j].vklad_typ == "KORUNY" %}
+                    {% set vklad_typ_string = "Kč" %}
+                {% elif row.spolecnici[i].podily[j].vklad_typ == "EURA" %}
+                    {% set vklad_typ_string = "Euro" %}
+                {% else %}
+                    {% set vklad_typ_string = "" %}
+                {% endif %}
+
+                <!-- Set type of repaid contribution -->
+                {% if row.spolecnici[i].podily[j].splaceni_typ == "KORUNY" %}
+                    {% set splaceni_typ_string = "Kč" %}
+                {% elif row.spolecnici[i].podily[j].splaceni_typ == "PROCENTA" %}
+                    {% set splaceni_typ_string = "%" %}                      
+                {% elif row.spolecnici[i].podily[j].splaceni_typ == "EURA" %}
+                    {% set splaceni_typ_string = "Euro" %}
+                {% else %}
+                    {% set splaceni_typ_string = "" %}
+                {% endif %}
+                
+                <!-- Set type of share -->
+                {% if row.spolecnici[i].podily[j].souhrn_typ == "PROCENTA" %}
+                    {% set souhrn_typ_string = "%" %}
+                {% else %}
+                    {% set souhrn_typ_string = "" %}
+                {% endif %}
+
+
+            <tr>
+                <td style = padding-left:4em>Podíl:</td>
+                {% if row.spolecnici[i].podily[j].vymaz_datum != 0 %}
+                    {% set underlne_style_open = undedrline_open_deleted %}
+                    {% set underlne_style_close = undedrline_closed_deleted %}
+                {% else %}
+                    {% set underlne_style_open = "" %}
+                    {% set underlne_style_close = "" %}
+                {% endif %}
+                <td>{{ underlne_style_open|safe }}Vklad: {{ row.spolecnici[i].podily[j].vklad_text }} {{ vklad_typ_string }}<br>
+                    Splaceno: {{ row.spolecnici[i].podily[j].splaceni_text }} {{ splaceni_typ_string }}<br>
+                    {% if row.spolecnici[i].podily[j].souhrn_text != "0"%}Podíl: {{ row.spolecnici[i].podily[j].souhrn_text }} {{ souhrn_typ_string }}{% endif %}
+                    {% if row.spolecnici[i].podily[j].druh_podilu.druh_podilu != "0" %}<br>Druh podílu: {{ row.spolecnici[i].podily[j].druh_podilu.druh_podilu }}{% endif %}{{ underlne_style_close|safe }}
+                </td>
+                <td>{{ underlne_style_open|safe }}Zapsáno: {{ row.spolecnici[i].podily[j].zapis_datum }} {% if row.spolecnici[i].podily[j].vymaz_datum != 0 %}<br>Vymazáno: {{ row.spolecnici[i].podily[j].vymaz_datum }}{% endif %}{{ underlne_style_close|safe }}</td>
+            </tr>
+            {% endfor %}
+        {% endif %}
+        <!-- END of individual ownership interests -->
+
     </tr>
     {% endfor %}
     {% endif %}
