--- a/templates/results2.html
+++ b/templates/results2.html
@@ -10,38 +10,7 @@
             {% set insolvency_notes = insolvency_notes.append(elem.insolvency_event) %}
         {% endfor %}
     
-        {% set zapis_split = row.zapis.split("-") %}
-        {% if zapis_split[1] == "01" %}
-            {% set mesic = "ledna" %}
-        {% elif zapis_split[1] == "02" %}
-            {% set mesic = "února" %}
-        {% elif zapis_split[1] == "03" %}
-            {% set mesic = "března" %}
-        {% elif zapis_split[1] == "04" %}
-            {% set mesic = "dubna" %}
-        {% elif zapis_split[1] == "05" %}
-            {% set mesic = "května" %}
-        {% elif zapis_split[1] == "06" %}
-            {% set mesic = "června" %}
-        {% elif zapis_split[1] == "07" %}
-            {% set mesic = "července" %}
-        {% elif zapis_split[1] == "08" %}
-            {% set mesic = "srpna" %}
-        {% elif zapis_split[1] == "09" %}
-            {% set mesic = "září" %}
-        {% elif zapis_split[1] == "10" %}
-            {% set mesic = "října" %}
-        {% elif zapis_split[1] == "11" %}
-            {% set mesic = "listopadu" %}
-        {% elif zapis_split[1] == "12" %}
-            {% set mesic = "prosince" %}
-        {% endif %}
-        
-        {% if zapis_split[2][0] == "0" %}
-            {% set den = zapis_split[2][1]  %}
-        {% else %}
-            {% set den = zapis_split[2]  %}
-        {% endif %}
+
         
         {% if row.soud == "MSPH" %}
             {% set soud = "Městského soudu v Praze" %}
@@ -92,7 +61,7 @@
         <td>Spisová značka:</td>
         <td>{{ row.oddil }} {{ row.vlozka }} vedená u {{ soud }}</td>
         <td>Den zápisu:</td>
-        <td>{{den}}. {{mesic}} {{zapis_split[0]}}</td>
+        <td>{{row.zapis}}</td>
     </tr>
     <tr>
         <td>Sídlo:</td>
